Fix Firefox and Safari sidebar scrolling overlap

--- a/src/css/inserter-card.scss
+++ b/src/css/inserter-card.scss
@@ -1,6 +1,9 @@
 /***********
 * Block card
 ***********/
+.interface-interface-skeleton__sidebar {
+	width: 295px;
+}
 .maxi-sidebar {
 	.block-editor-block-icon {
 		flex: 0;
